terminal: add ctrl+click to open URIs

This adds support for opening links in the terminal views by using
ctrl+click similar to gnome-terminal.

https://bugzilla.gnome.org/show_bug.cgi?id=769890